<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimension_140dp"
        android:src="@drawable/h3"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/margin_bottom_dim"
        android:id="@+id/burger1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_default"
        android:text="@string/americano"
        android:textColor="@color/dark_grey"
        android:layout_gravity="center_vertical"
        android:id="@+id/nomeBurger1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimension"
        android:textSize="@dimen/subtitle"
        android:text="@string/ingredientes"
        android:textColor="@color/fivegrey"
        android:id="@+id/ingredBurger1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimension"
        android:textSize="@dimen/text"
        android:padding="@dimen/sides"
        android:text="@string/cebola_caramelizada_p_o_australiano_4_tipos_de_queijo_alface_molho_especial_e_maionese"
        android:textColor="@color/sixgrey"
        android:id="@+id/descrBurger1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_dimension"
        android:textSize="@dimen/price"
        android:padding="@dimen/lightpadding"
        android:text="@string/r_45_00"
        android:textColor="@color/RED"
        android:layout_gravity="right"
        android:gravity="right"
        android:textStyle="bold"
        android:id="@+id/precoBurger1"/>

</LinearLayout>